tests/compile_fail/declare_scheduler_missing_name.rs
use ktstr::declare_scheduler;

declare_scheduler!(MY_SCHED, {
    binary = "scx_my_sched",
});

fn main() {}
